--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
   "name": "gemini-code-api",
-  "version": "1.0.0",
-  "description": "Gemini API proxy service compatible with OpenAI and Claude APIs",
-  "private": true,
+  "version": "2.0.0",
+  "description": "高性能多协议AI网关服务，支持OpenAI、Claude与Gemini API的统一访问接口",
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "wrangler dev",
     "build": "tsc",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "deploy": "npm run build && wrangler deploy",
+    "deploy:force": "npm run build && wrangler deploy --force",
+    "logs": "wrangler tail",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
-    "deploy": "wrangler deploy",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:migrate": "wrangler d1 migrations apply gemini-code --remote",
-    "db:migrate:local": "wrangler d1 migrations apply gemini-code --local"
+    "db:create": "wrangler d1 create gemini-code",
+    "db:migrate": "wrangler d1 migrations apply gemini-code",
+    "db:reset": "wrangler d1 execute gemini-code --command='DROP TABLE IF EXISTS request_logs; DROP TABLE IF EXISTS api_key_metrics; DROP TABLE IF EXISTS system_stats;' && npm run db:migrate"
   },
+  "keywords": [
+    "gemini",
+    "openai",
+    "claude",
+    "api-gateway",
+    "cloudflare-workers",
+    "proxy",
+    "load-balancer"
+  ],
+  "author": "Gemini Code API Team",
+  "license": "MIT",
   "dependencies": {
-    "@libsql/client": "^0.4.3",
-    "drizzle-orm": "^0.29.3",
-    "hono": "^3.12.0"
+    "hono": "^4.9.2",
+    "zod": "^3.23.8",
+    "drizzle-orm": "^0.33.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240117.0",
-    "@types/node": "^20.11.10",
-    "drizzle-kit": "^0.20.13",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.0",
-    "vitest-environment-miniflare": "^2.14.4",
-    "wrangler": "^4.0.0"
+    "@types/node": "^22.0.0",
+    "@cloudflare/workers-types": "^4.20241218.0",
+    "drizzle-kit": "^0.24.0",
+    "typescript": "^5.5.0",
+    "vitest": "^2.0.0",
+    "wrangler": "^4.31.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
