--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "db:create": "wrangler d1 create gemini-code",
     "db:migrate": "wrangler d1 migrations apply gemini-code --remote",
     "db:migrate:local": "wrangler d1 migrations apply gemini-code --local",
-    "db:reset": "wrangler d1 execute gemini-code --command='DROP TABLE IF EXISTS request_logs; DROP TABLE IF EXISTS api_key_metrics; DROP TABLE IF EXISTS system_stats;' && npm run db:migrate",
+    "db:reset": "wrangler d1 execute gemini-code --command='DROP TABLE IF EXISTS request_logs; DROP TABLE IF EXISTS api_key_metrics; DROP TABLE IF EXISTS system_stats; DROP TABLE IF EXISTS error_logs;' && npm run db:migrate",
+    "db:backup": "wrangler d1 export gemini-code --output backup-$(date +%Y%m%d-%H%M%S).sql",
+    "db:restore": "wrangler d1 execute gemini-code --file",
     "examples": "node examples/run.js",
     "examples:gemini": "node examples/run.js gemini",
     "examples:claude": "node examples/run.js claude"
